Fix iframe sizes on mobile

--- a/src/assets/scss/wordpress.scss
+++ b/src/assets/scss/wordpress.scss
@@ -70,13 +70,19 @@ a img.aligncenter {
     font-size: 16px;
   }
   p iframe {
-    max-width: 90% !important;
-    max-height: 350px !important;
-    display: block;
-    margin: 0 auto;
+    max-width: 90%;
+    max-height: 350px;
+  display: block;
+  margin: 0 auto;
   }
 }
 @media only screen and (max-width: 700px) {
+  p iframe {
+    max-width: 80% !important;
+    max-height: 200px !important;
+    display: block;
+    margin: 0 auto;
+  }
   .article--content img {
     width: 95%;
     height: auto;
